--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.4.0",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
@@ -26,8 +27,10 @@
     "eslint-config-xo": "^0.43.1",
     "eslint-config-xo-typescript": "^0.56.0",
     "husky": "^8.0.0",
+    "jest-ts-webcompat-resolver": "^1.0.0",
     "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
+    "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   },
   "dependencies": {
