Add sonar workflow

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "node dist",
     "start:dev": "node --watch dist",
     "test": "npx jest",
+    "test:coverage": "npx jest --coverage --watchAll=false",
     "prepare": "husky install"
   },
   "keywords": [],
