--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
@@ -36,6 +37,7 @@
   },
   "dependencies": {
     "chalk": "^5.2.0",
+    "cors": "^2.8.5",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
     "eslint-config-prettier": "^8.6.0",
