--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -13,7 +13,7 @@ sonar.sources=./src
 
 sonar.sourceEncoding=UTF-8
 
-sonar.test.inclusions=src/**/*.test.ts, src/**/*.test.tsx
-sonar.coverage.exclusions=src/index.tsx, src/server/startServer.ts, src/server/index.ts, src/loadEnvironment.ts
+sonar.test.inclusions=src/**/*.test.ts, src/**/*.test.ts
+sonar.coverage.exclusions=src/index.ts, src/server/startServer.ts, src/server/index.ts, src/loadEnvironment.ts, src/database/connectDatabase.ts
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info
