Create usersControllers login

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/debug": "^4.1.7",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.13.0",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
@@ -42,6 +43,7 @@
     "dotenv": "^16.0.3",
     "eslint-config-prettier": "^8.6.0",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.9.2",
     "morgan": "^1.10.0"
   }
