--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jsonwebtoken": "^9.0.1",
     "@types/morgan": "^1.9.4",
     "@types/node": "^18.13.0",
+    "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.52.0",
     "@typescript-eslint/parser": "^5.52.0",
     "eslint": "^8.34.0",
@@ -33,6 +34,7 @@
     "jest-ts-webcompat-resolver": "^1.0.0",
     "lint-staged": "^13.1.2",
     "prettier": "^2.8.4",
+    "supertest": "^6.3.3",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
   },
@@ -44,6 +46,7 @@
     "eslint-config-prettier": "^8.6.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
+    "mongodb-memory-server": "^8.11.4",
     "mongoose": "^6.9.2",
     "morgan": "^1.10.0"
   }
