--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
-sonar.projectKey=marcgirbaub_202301-w6chwe-victor-andujar-marc-girbau-back
-sonar.organization=marcgirbaub
+sonar.projectKey=a9nna_202301-w7ch2-ana-coronel-back
+sonar.organization=a9nna
+
 
 # Encoding of the source code. Default is default system encoding
 
