--- a/package.json
+++ b/package.json
@@ -40,6 +40,10 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/multer": "^1.4.7",
+    "@types/uniqid": "^5.3.2",
+    "bcryptjs": "^2.4.3",
     "chalk": "^5.2.0",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
@@ -49,6 +53,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb-memory-server": "^8.11.4",
     "mongoose": "^6.9.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "uniqid": "^5.4.0"
   }
 }
